--- a/NPP-PDF2DOC/src/main/webapp/WEB-INF/web.xml
+++ b/NPP-PDF2DOC/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+<?xml version="1.0" encoding="UTF-8" ?>
+<web-app
+    xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+    version="4.0"
+>
 
     <!-- 1. Tên hiển thị của ứng dụng -->
-    <display-name>Async-JSP-PDF-Project</display-name>
+    <display-name>NPP-PDF2DOC</display-name>
 
     <!-- 2. Cấu hình trang chào mừng (Welcome Page) -->
     <!-- Khi ai đó truy cập /Async-JSP-PDF-Project/, server sẽ tìm file này -->
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <!-- (index.jsp của chúng ta sẽ redirect về /login) -->
+        <welcome-file>index</welcome-file>
+        <!-- root will dispatch to servlet or resource mapped at /index -->
     </welcome-file-list>
 
     <!-- 3. Cấu hình thời gian Session Timeout (Đăng xuất tự động) -->
@@ -23,10 +25,9 @@
     <!--
     LƯU Ý QUAN TRỌNG:
     Chúng ta KHÔNG cần khai báo <servlet> và <servlet-mapping> ở đây.
-    Lý do: Bạn đã sử dụng @WebServlet("/login"), @WebServlet("/status"),... 
+    Lý do: Bạn đã sử dụng @WebServlet("/login"), @WebServlet("/status"),...
     trong code Java. Server Tomcat 9 sẽ tự động đọc các annotation đó.
     Cách làm này (dùng annotation) là cách làm hiện đại và gọn gàng hơn.
     -->
 
 </web-app>
-
